# chk

./: .travis.yml  CMakeLists.txt  conanfile.py  readme.adoc
include/chk/: cassert.hpp  cterminate.hpp  unreachable.hpp
include/chk/detail/: source_location.hpp  utils.hpp
tests/: CMakeLists.txt  test.cassert.ct.cpp
